# xaeroflux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.diagnostics.md  README.md  cbindgen.toml  clippy.toml  code_of_conduct.md  gh-discord.sh  main.rs  peer1.db  peer2.db-shm  peer2.db-wal  rust-toolchain.toml  rustc-ice-2025-08-19T13_39_05-56016.txt  rustc-ice-2025-08-19T19_39_37-68045.txt  rustc-ice-2025-09-12T20_13_19-57368.txt  rustfmt.toml  xaeroflux-aof-0000.seg  xaeroflux.toml  xsp-0.0.1.draft.md
.github/workflows/: rust.yml
src/: consumer.rs  engine.rs  event_buffer.rs  lib.rs  p2p.rs  producer.rs  sys.rs
src/core/: aof.rs  config.rs  consumer.rs  date_time.rs  event.rs  event_buffer.rs  listeners.rs  meta.rs  mod.rs  pool.rs  producer.rs  size.rs  storage.rs  storage_meta.rs  swimming.rs  threads.rs
src/core/aof/: actor.rs
src/core/aof/storage/: format.rs  lmdb.rs  meta.rs
src/data_structures/: hash.rs  merkle_tree.rs
src/indexing/: hash.rs  indexing_storage.md  merkle_tree.rs  mod.rs  storage.rs
src/indexing/storage/: codec.rs  format.rs  indexing_actor.rs  io.rs  mmr.rs  mod.rs
src/indexing/storage/actors/: indexing_actor.rs  mmr_actor.rs  mod.rs  secondary_index_actor.rs  segment_reader_actor.rs  segment_writer_actor.rs
src/logs/: diagnostics.rs  mod.rs  probe.rs  wal.rs
src/networking/: iroh.rs  mod.rs  p2p.rs
src/system/: control_bus.rs  mod.rs
tests/: merkle_tree.rs  sdk_api_test.rs  segment_writer.rs  storage.rs  wal.rs
xaeroflux/: Cargo.toml
xaeroflux-actors/: Cargo.toml  build.rs  rustfmt.toml  xaeroflux.toml
xaeroflux-actors/examples/: test_discovery.rs
xaeroflux-actors/src/: event_router.rs  lib.rs  materializer.rs  pipe.rs  pipeline_parser.rs  read_api.rs  subject.rs  system_actors.rs  system_payload.rs  vector_clock_actor.rs
xaeroflux-actors/src/aof/: actor.rs  mod.rs  ring_buffer_actor.rs
xaeroflux-actors/src/aof/storage/: format.rs  lmdb.rs  meta.rs  mod.rs
xaeroflux-actors/src/crdt/: bus.rs  core.rs  mod.rs
xaeroflux-actors/src/crdt/actors/: crdt_op.rs  mod.rs
xaeroflux-actors/src/indexing/: hash.rs  lmdb.rs  merkle_tree.rs  mmr.rs  mod.rs  vec_search_actor.rs
xaeroflux-actors/src/indexing/storage/: format.rs  io.rs  lmdb.rs  mmr.rs  mod.rs
xaeroflux-actors/src/indexing/storage/actors/: mmr_actor.rs  mod.rs  secondary_index_actor.rs  segment_reader_actor.rs  segment_writer_actor.rs  vector_search_actor.rs
xaeroflux-actors/src/networking/: actor.rs  control_plane.rs  data_plane.rs  discovery.rs  format.rs  group_discovery.rs  iroh.rs  mod.rs  network_conduit.rs  p2p.rs  pool.rs  some_file.txt  state.rs  topic.rs  utils.rs
xaeroflux-actors/src/networking/actors/: control_plane.rs  mod.rs
xaeroflux-actors/src/system/: control_bus.rs
xaeroflux-aof/: data.mdb  lock.mdb
xaeroflux-core/: Cargo.toml  deny.toml  xaeroflux.toml
xaeroflux-core/src/: config.rs  event.rs  hash.rs  keys.rs  lib.rs  listeners.rs  merkle_tree.rs  namespacing.rs  network.rs  pipe.rs  pool.rs  ring_buffer_actor.rs  size.rs  sys.rs  system_paths.rs  vector_clock.rs  vector_clock_actor.rs  workspace.rs
xaeroflux-core/src/logs/: diagnostics.rs  mod.rs  probe.rs  wal.rs
xaeroflux-crdts/: Cargo.toml  README.md
xaeroflux-crdts/src/: lib.rs
xaeroflux-ffi/: Cargo.toml  README.md
xaeroflux-ffi/src/: lib.rs
xaeroflux-macros/: Cargo.toml  LICENSE  README.md  cargo.toml
xaeroflux-macros/src/: lib.rs
xaeroflux/src/: lib.rs
