[package]
name = "xaeroflux"
description = "EXPERIMENTAL: This crate is not ready for production use"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
version     = "0.1.0-m1"
authors = ["ricky.nj@gmail.com"]
edition = "2024"
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"

[features]
diagnostics = []
default = []

[lib]
name = "xaeroflux"  # This should match your library name without the "lib" prefix
crate-type = ["staticlib", "cdylib", "rlib"] 

[package.metadata.release]
allow-branch      = ["main"]      # only release from main
sign-commit       = true          # GPG-sign your release commits
sign-tag          = true          # GPG-sign your git tags
push-remote       = "origin"

[dev-dependencies]
xaeroflux = { path = "." }  # Adjust the path as necessary

[build-dependencies]
libc = "0.2.172"

[dependencies]
mio = "1.0.3"
crdts = "7.3.2"
bytemuck = "1.23.0"
rkyv = "0.8.10"
rkyv_dyn = "0.7.44"
threadpool = "1.8.1"
figlet-rs = "0.1.5"
lru = "0.14.0"
toml = "0.8.22"
hex = "0.4.3"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
sha2 = { version = "0.10.9" }
iroh = "0.35.0"
iroh-blobs = "0.35.0"
anyhow = "1.0.98"
liblmdb = "0.9.70"
tempfile = "3.20.0"
libc = "0.2.172"
memmap2 = "0.9.5"
crossbeam = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
rustfix = "0.9.0"
