[package]
name = "xaeroflux-actors"
version = "0.9.8-alpha.3"
edition     = "2024"
description = "EXPERIMENTAL: actor layer for xaeroflux"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
authors = ["ricky.nj@gmail.com"]
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"

# FIXME: Remove when stable.
[lints.rust]
unused = "allow"


[lib]
name = "xaeroflux_actors"  # This should match your library name without the "lib" prefix
crate-type = ["staticlib", "cdylib", "rlib"] 

[package.metadata.release]
allow-branch      = ["main"]      # only release from main
sign-commit       = true          # GPG-sign your release commits
sign-tag          = true          # GPG-sign your git tags
push-remote       = "origin"


[build-dependencies]
libc = "0.2.172"

[dependencies]
crc-fast = "1.3.0"
parking_lot = "0.12"
hnsw_rs = "0.3.2"
rusted-ring = {workspace = true}
xaeroid = { workspace = true }
xaeroflux-core = { version = "0.9.8-alpha.3" }
iroh = {version = "0.91.2", "default-features" = true, features = ["discovery-local-network", "discovery-pkarr-dht"] }
tokio = { version = "1.45.1", default-features = false, features = ["rt", "macros", "net", "sync"] }
bytemuck = "1.23.0"
rkyv = "0.8.10"
hex = "0.4.3"
tracing = { version = "0.1.41", features = ["log"] }
anyhow = "1.0.98"
liblmdb = "0.9.70"
tempfile = "3.20.0"
libc = "0.2.172"
futures-lite = "2.6.0"
futures-core = "0.3.31"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false