[package]
name = "xaeroflux-core"
version = "0.1.0-m3"
edition = "2024"

[features]
diagnostics = []
default = []

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
tokio = { version = "1.45.1", default-features = false, features = ["rt", "macros", "net", "sync"] }
tokio-stream = "0.1.17"
crdts = "7.3.2"
bytemuck = "1.23.0"
rkyv = "0.8.10"
rkyv_dyn = "0.7.44"
threadpool = "1.8.1"
figlet-rs = "0.1.5"
toml = "0.8.22"
hex = "0.4.3"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
sha2 = { version = "0.10.9" }
tempfile = "3.20.0"
memmap2 = "0.9.5"
crossbeam = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
rustfix = "0.9.0"
libc = "0.2.172"