[package]
name = "xaeroflux-core"
version = "0.9.8-alpha.3"
edition = "2024"
description = "EXPERIMENTAL: actor layer for xaeroflux"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
authors = ["ricky.nj@gmail.com"]
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"

[features]
diagnostics = []
default = []

[dependencies]
rusted-ring = { workspace = true }
blake3 = "1.8.2"
xaeroid = { workspace = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "macros", "net", "sync"] }
bytemuck = "1.23.0"
rkyv = "0.8.10"
threadpool = "1.8.1"
figlet-rs = "0.1.5"
toml = "0.8.22"
hex = "0.4.3"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
sha2 = { version = "0.10.9" }
tempfile = "3.20.0"
memmap2 = "0.9.5"
crossbeam = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
libc = "0.2.172"