[package]
name = "xaeroflux-crdts"
version = "0.7.0-m5"
edition = "2024"
description = "EXPERIMENTAL: CRDT layer for xaeroflux"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
authors = ["ricky.nj@gmail.com"]
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"

[lib]
name = "xaeroflux_crdt"
crate-type = ["rlib"]

[dependencies]
xaeroid = { version = "0.2.1-rc1" }
xaeroflux-core = {version = "0.7.0-m5" }

# Core CRDT algorithms
crdts = "7.3.2"
yrs = "0.23.4"

# Zero-copy serialization (same as xaeroflux-core)
rkyv = "0.8.10"
bytemuck = "1.23.0"
serde = { version = "1.0.219", features = ["derive"] }

