[package]
name = "xaeroflux-ffi"
version = "0.7.0-m5"
edition     = "2024"
description = "EXPERIMENTAL: actor layer for xaeroflux"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
authors = ["ricky.nj@gmail.com"]
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"

[dependencies]
xaeroflux = {path = "../xaeroflux"}
blake3 = "1.8.2"