[package]
name = "xaeroflux-macros"
version = "0.8.1-m5"
edition     = "2024"
description = "EXPERIMENTAL: actor layer for xaeroflux"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
authors = ["ricky.nj@gmail.com"]
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"
[lib]
proc-macro = true

[dependencies]
paste = "1.0"
xaeroflux-core = { version = "0.8.1-m5" }
trybuild = "1.0.105"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
blake3 = "1.8.2"