[package]
name = "xaeroflux"
version = "0.7.0-m5"
edition = "2024"
description = "EXPERIMENTAL: actor layer for xaeroflux"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
authors = ["ricky.nj@gmail.com"]
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"

[dependencies]
xaeroid = { workspace = true }
xaeroflux-core = { path = "../xaeroflux-core" }
xaeroflux-actors = { path = "../xaeroflux-actors" }
xaeroflux-macros = { path = "../xaeroflux-macros" }
xaeroflux-crdts = { path = "../xaeroflux-crdts" }
