[package]
name = "xaeroflux"
version = "0.8.1-m5"
edition = "2024"
description = "EXPERIMENTAL: actor layer for xaeroflux"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
authors = ["ricky.nj@gmail.com"]
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"

[dependencies]
rusted-ring-new = {package = "rusted-ring", workspace = true}
rusted-ring = { workspace = true }
xaeroid = { workspace = true }
xaeroflux-core = { version = "0.8.1-m5" }
xaeroflux-actors = { version = "0.8.1-m5" }
xaeroflux-macros = { version = "0.8.1-m5" }
xaeroflux-crdts = { version = "0.8.1-m5" }
