[package]
name = "xaeroflux"
version = "0.9.1-alpha"
edition = "2024"
description = "EXPERIMENTAL: actor layer for xaeroflux"
categories = ["database", "database-implementations"]
keywords = ["unstable", "draft", "experimental"]
authors = ["ricky.nj@gmail.com"]
license = "MPL-2.0"
documentation = "https://github.com/block-xaero/xaeroflux.git"
repository = "https://github.com/block-xaero/xaeroflux.git"
homepage = "https://blockxaero.io"
readme = "README.md"

[dependencies]
rusted-ring = {workspace = true}
xaeroid = { workspace = true }
xaeroflux-core = { version = "0.9.1-alpha" }
xaeroflux-actors = { version = "0.9.1-alpha" }
